# git-cache-clone

./: .gitignore  README.md  docker_test_command.sh  pyproject.toml
docker/: Dockerfile
src/git_cache_clone/: __init__.py  cli.py  cli_arguments.py  cli_main.py  cli_parse.py  config.py  core.py  definitions.py  errors.py  file_lock.py  logging.py  main.py  meta_data.py  program_arguments.py  repo_pod.py  types.py  utils.py
src/git_cache_clone/cli/: arguments.py  main.py
src/git_cache_clone/cli/commands/: add.py  clean.py  clone.py  info.py  refresh.py
src/git_cache_clone/commands/: README.md  __init__.py  add.py  cache.py  clean.py  clone.py  info.py  refresh.py
src/git_cache_clone/constants/: __init__.py  defaults.py  filenames.py  keys.py
src/git_cache_clone/core/: add.py  clean.py  clone.py  refresh.py
src/git_cache_clone/metadata/: __init__.py  adapters_converters.py  collection.py  db.py  lock.py  protocols.py  repo.py  repo_meta.py  tools.py  utils.py
src/git_cache_clone/metadata/json_store/: __init__.py  applier_and_fetcher.py
src/git_cache_clone/metadata/memory_store/: applier_and_fetcher.py
src/git_cache_clone/metadata/sqlite_store/: __init__.py  adapters_converters.py  applier_and_fetcher.py  appliers_and_fetcher.py  db.py  repo.py
src/git_cache_clone/pod/: __init__.py  pod.py
src/git_cache_clone/utils/: __init__.py  cli.py  file_lock.py  git.py  logging.py  misc.py
tests/: fixtures.py  test_add.py  test_add_cli.py  test_clean.py  test_clean_cli.py  test_clone.py  test_clone_cli.py  test_file_lock.py  test_main_cli.py  test_refresh.py  test_refresh_cli.py  utils.py
tests/cli/: test_add_cli.py  test_clean_cli.py  test_clone_cli.py  test_info_cli.py  test_main_cli.py  test_refresh_cli.py
tests/utils/: test_file_lock.py
