[project]
name = "git-cache-clone"
version = "0.1.0"
description="Git clone wrapper with caching and fast reference clones"
authors = [
    {name = "jallard",email = "justinallard20@gmail.com"}
]
readme = "README.md"
license = "MIT"

requires-python = ">=3.6"
dependencies = [
]

keywords = ["git"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/jallard-007/git-cache-clone"

[project.scripts]
git-cache = "git_cache_clone.cli_main:main"

[tool.poetry]
packages = [{include = "git_cache_clone", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]  # Errors, Flake8, and import sorting
lint.ignore = ["E501"]  # Ignore long lines

[tool.coverage.run]
source = ["src/git_cache_clone"]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"
pythonpath = [
  "src"
]
